--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Balamurali Balu
-#logo: /assets/img/headshot_circle.png
+logo: /assets/img/bala pro.jpg
 description: Bridging Art and Algorithms | Exploring the Intersection of Music and AI
 #show_downloads: true
 theme: jekyll-theme-minimal
