--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Balamurali Balu
 logo: /assets/img/balapro.jpg
 description: Bridging Art and Algorithms | Exploring the Intersection of Music and AI
-show_downloads: true
+#show_downloads: true
 theme: jekyll-theme-minimal
