--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Balamurali Balu
 logo: /assets/img/balapro.jpg
 description: Bridging Art and Algorithms
 #show_downloads: true
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
