--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Balamurali Balu
-logo: /assets/img/Pic20250528.jpg
+logo: /assets/img/Pic20250528.JPG
 description: Bridging Art and Algorithms
 #show_downloads: true
 theme: jekyll-theme-minimal
